# runtrace

./: .env  .gitignore  README.md  compose.yaml
Producer/: EventRecord.avsc  config.json  fakeProd.py  prod.py  settingsGen.py
QtGUI/: QtGUI.pro  customserieschart.cpp  customserieschart.h  main.cpp  plotData.h  plotWindow.cpp  plotWindow.h
Shared/: RunsLib.py  app_config.py  logging_config.py  transmitters.py
api/: Dockerfile  app.py  requirements.txt
auth/: smtp-auth.txt
backend/: Dockerfile
backend/api/: requirements.txt
backend/api/app/: database.py  main.py
backend/api/app/models/: enums.py  event.py  run.py  runinfo.py  user.py
backend/api/app/routers/: events.py  login.py  parameters.py  runinfo.py  runs.py  users.py
backend/api/app/schemas/: event.py  run.py  runinfo.py  user.py
backend/api/app/sse/: run_broadcaster.py
backend/api/app/utils/: auth.py
consumer/: Dockerfile  consumer.py  requirements.txt
consumer/app/: EventRecord.avsc  consumer.py  logging_config.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/project/: package-lock.json  package.json
frontend/project/src/: App.jsx  utils.js
frontend/project/src/components/: Plot.jsx
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx  utils.js
frontend/src/components/: BottomControls.jsx  Controls.jsx  Dashboard.jsx  IterToggles.jsx  Login.jsx  Navbar.jsx  Plot.jsx  PlotArea.jsx  RefreshButton.jsx  RequireSuperUser.jsx  RunInfo.jsx  RunParameterSelector.jsx  RunStatus.jsx  Runs.jsx  RunsTable.jsx  TopControls.jsx  UserType.jsx  Users.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Profile.jsx  Runs.jsx  Users.jsx  Welcome.jsx
notifier/: Dockerfile  email_sender.py  notifier.py  requirements.txt  run_completed_email.html  run_completed_email.py
notifier/app/: logging_config.py  notifier.py
openFOAM/: .gitignore
openFOAM/Libraries/eventSender/: CMakeLists.txt
openFOAM/Libraries/eventSender/include/: BoundedQueue.h  HttpRecordSender.h  HttpTools.h  IAuthentication.h  IMessageEncoder.h  IRecordSender.h  KafkaRecordSender.h  LoggerFactory.h  MsgPackEncoder.h  NetworkLoggerBase.h  Record.h  UsrPwdAuthentication.h
openFOAM/Libraries/eventSender/src/: HttpRecordSender.cpp  HttpTools.cpp  KafkaRecordSender.cpp  MsgPackEncoder.cpp  NetworkLoggerBase.cpp  UsrPwdAuthentication.cpp  main.cpp
openFOAM/Libraries/ofRecorder/CaseInfo/: foamCaseInfo.C  foamCaseInfo.H
openFOAM/Libraries/ofRecorder/DataLogger/: DataLogger.C  DataLogger.H
openFOAM/Libraries/ofRecorder/Make/: files  options
openFOAM/SampleCase/cavity/system/: blockMeshDict  controlDict  dataLogger
openFOAM/SampleSolver/newicoFoam/: createFields.H  newicoFoam.C
openFOAM/SampleSolver/newicoFoam/Make/: files  options
